Revert "Changes regarding the layout issue"
This reverts commit 710dab7c063e2215e2c0cbf0341be68782dc657e.

--- a/apps/ptg-react-app/src/app/examples/chatbot/Chat.css
+++ b/apps/ptg-react-app/src/app/examples/chatbot/Chat.css
@@ -85,7 +85,7 @@
   position: relative;
   margin-bottom: 15px;
 }
-.chatbot-input[type='text'] {
+input[type='text'] {
   flex: 1;
   padding: 10px;
   border: 1px solid #ccc;
@@ -93,10 +93,9 @@
   margin-right: 10px;
   font-size: 16px;
 }
-.chatbot-input[type='file'] {
+input[type='file'] {
   display: none;
 }
-
 .uploadIcon {
   cursor: pointer;
   margin-right: 10px;
